# CineLink

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  cinelink.py  docker-compose.yml  requirements.txt
archive/: Cargo.toml
archive/src/: main.rs  plex.rs  tmdb.rs  utils.rs
debugging/: notion_props.rs  tmdb_props.rs  webhook_server.js
docs/: db_properties.md  tmdb_mapping.md  workflow.md  workflow_v2.md
examples/: anilist_props.rs  backfill_tv.rs
helpers/: log_setup.py  notion_helper.py  plex_helper.py  scheduler_helper.py
logs/: logs.txt
src/: anilist.rs  app.rs  lib.rs  main.rs  models.rs  notion.rs  notion_fallback.rs  server.rs  sync.rs  tmdb.rs  utils.rs
src/anilist/: client.rs  map.rs  mod.rs  resolve.rs  text.rs
templates/: gui.html  gui.html.top  log_entry.html
tests/: webhook_flow.rs
