[package]
name = "cinelink"
version = "4.0.5"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
once_cell = "1.19"
urlencoding = "2.1.3"
axum-extra = { version = "0.9", features = ["typed-header"] }
headers = "0.4"
sha2 = "0.10"
hmac = "0.12"
constant_time_eq = "0.2"
async-trait = "0.1"
hex = "0.4"

[[bin]]
name = "notion_props"
path = "debugging/notion_props.rs"

[[bin]]
name = "tmdb_props"
path = "debugging/tmdb_props.rs"

[[bin]]
name = "cinelink_server"
path = "src/main.rs"
